--- a/dietterc.github.io/index.html
+++ b/dietterc.github.io/index.html
@@ -84,7 +84,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="circle/gamejam-colton.js?ORIAC=307824560"></script>
+        <script type="text/javascript" src="circle/gamejam-colton.js?INLZB=82317075"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
