--- a/test.html
+++ b/test.html
@@ -1,129 +1,195 @@
-<!DOCTYPE html>
+
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>购物车</title>
-    </head>
+  <head>
+    <title>购物车</title>
+    <meta charset="utf-8" />
+      <script type="text/javascript" src="../JS/jquery-3.4.1.js"></script>
     <style type="text/css">
-        h1{
-            text-align: center;
-        }
-        table{
-            margin: 0 auto;
-        }
-    body{
-        font-size: larger;color: crimson;
-        background-image: url(img/2.jpg);
-        background-repeat: no-repeat;
-        background-size: 100%;
-    }
-    table th,table td{
-
-    }
+      h1 {
+        text-align:center;
+      }
+      table {
+        margin:0 auto;
+        width:40%;
+        border:2px solid #aaa;
+        border-collapse:collapse;
+      }
+      table th, table td {
+        border:2px solid #aaa;
+        padding:5px;
+      }
+      th {
+        background-color:#eee;
+      }
     </style>
-    <body >
-        <h1>Your Order</h1>
-        <table border="1" >
-            <tr>
-                <!--文本th-->
-                <th>Name</th>
-                <th>Price</th>
-
-                <th>Modify</th>
-
-            </tr>
-            <tr>
-                <td>Food 1st</td>
-                <td>5.99</td>
-
-                <td align="center">
-                    <input type="button" value="Add" onclick="add_shoppingcar(this)"/>
-                </td>
-            </tr>
-        </table>
-        <h1> Cart</h1>
-        <table border="1">
-            <tbody id="goods">
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="3" align="center" >Total:</td>
-                    <td id="total"></td>
-                    <td>$</td>
-                </tr>
-            </tfoot>
-        </table>
-    </body>
-    <script type="text/javascript">
-
-        function add_shoppingcar(btn){
-            var tr=btn.parentNode.parentNode;
-            var tds=tr.getElementsByTagName("td");
-            var name=tds[0].innerHTML;
-            var price=tds[1].innerHTML;
-            var tbody=document.getElementById("goods");
-            var row=tbody.insertRow();//insertRow表格开头插入新行
-            row.innerHTML="<td>"+name+"</td>"+
-        "<td>"+price+"</td>"+
-        "<td align='center'>"+
-        "<input type='button' value='-' id='jian'  οnclick='change(this,-1)'  />"+
-        "<input id='text' type='text' size='1' value='1' readonly='readonly' />"+
-        "<input type='button' value='+' id='add'  οnclick='change(this,1)'  />"+
-        "</td>"+
-        "<td>"+price+"</td>"+
-        "<td align='center'>"+
-            "<input type='button' value='X' οnclick='del(this)'/>"+
-        "</td>"+
-        "</tr>"
-        total();
-        }
-        //增加减少数量，用n正负1来表示点击了加减按钮
-        function change(btn,n){
-        //获取数量的三个input对象
-        var inputs = btn.parentNode.getElementsByTagName("input");
-        //获取原来的数量
-        var amount = parseInt(inputs[1].value);
-        //当amount=1时不能再点击"-"符号
-        //用n<0来表示点击了减button
-        if(amount<=1 && n<0){
-            return;
-        }
-        //根据加减来改变数量
-        inputs[1].value = amount + n;
-        //将改变后的数量值赋值给amount
-        amount = inputs[1].value;
-        //获取表格中的行
-        var tr = btn.parentNode.parentNode;
-        //获取所有的列
-        var tds = tr.getElementsByTagName("td");
-        //获取单价
-        var price = parseFloat(tds[1].innerHTML);
-        //总价=单价*数量
-        var m = price * amount;
-        //将总价赋值给相应的位置
-        tds[3].innerHTML = m;
-        //调用total方法，求总计
-        total();
-    }
-
-
-        function total(){
-            var tbody=document.getElementById("goods");
-            var trs=tbody.getElementsByTagName("tr");
-            var sum=0;
-            for(var i=0;i<trs.length;i++){
-                var tds=trs[i].getElementsByTagName("td");
-                var m=tds[3].innerHTML;
-                sum += parseFloat(m);
-            }
-            var total=document.getElementById("total");
-            total.innerHTML = sum;
-        }
-        function del(i){
-            var tr=i.parentNode.parentNode;
-            tr.parentNode.removeChild(tr);
-            //tr.remove(tr);
-            total();
-        }
+    <script src="../JS/jquery-3.4.1.js"></script>
+    <script>
+    	//加入购物车
+    	function add_shoppingcart(btn){
+    		//obj.eq(i)== $(obj[i])
+    		//获取商品名
+    		var name=$(btn).parent().siblings().eq(0).html();//DOM对象强转成jquery对象
+    		//获取单价
+    		var price=$(btn).parent().siblings().eq(1).html();
+    		//拼一行
+    		var tr=
+    		 '<tr>'+
+             '<td>'+name+'</td>'+
+             '<td>'+price+'</td>'+
+             '<td align="center">'+
+               '<input type="button" value="-" οnclick="decrease(this);"/>'+
+               '<input type="text" size="3" readonly value="1"/>'+
+               '<input type="button" value="+" οnclick="increase(this);"/>'+
+             '</td>'+
+             '<td>'+price+'</td>'+
+             '<td align="center"><input type="button" value="x" οnclick="del(this);"/></td>'+
+           '</tr>';
+           //追加此行
+           $("#goods").append($(tr));
+           sum();
+    	}
+    	//加法
+    	function increase(btn){
+    		//获取数量
+    		var n=$(btn).prev().val();
+    		//+1,再写入框内
+    		$(btn).prev().val(++n);
+    		//获取单价
+    		var p=$(btn).parent().prev().html();
+    		//计算金额并写入金额列
+    		$(btn).parent().next().html(p*n);
+    		sum();
+    	}
+    	//减法
+    	function decrease(btn){
+    		var n=$(btn).next().val();
+  			//数量不能小于1
+  			if(n<= 1) {
+  			return;
+  			}
+    		$(btn).next().val(--n);
+    		var p=$(btn).parent().prev().html();
+    		$(btn).parent().next().html(p*n);
+    		sum();
+    	}
+    	//删除
+    	function del(btn){
+    		var s=$(btn).parent().parent();
+    		$(s).remove();
+    		sum();
+    	}
+    	//求和
+    	function sum(){
+    		 //获取tbody下所有的行
+  			var $trs = $("#goods tr");
+  			console.log($trs);
+  			console.log($trs.length);  
+ 		 //遍历他们
+  			var sum = 0;
+		  	for(var i=0;i<$trs.length;i++) {
+		  //获取每一行
+  			var $tr = $trs.eq(i);
+  			console.log($tr); 
+ 		 //获取该行中第4列的值(金额/String)
+  			var mny = 
+  			$tr.children().eq(3).html();
+  			//    tds      td3     金额
+  			console.log(mny); 
+  			sum += parseFloat(mny);
+  			}
+  			console.log(sum); 
+  			//将合计值写入合计列
+  		$("#total").html(sum);
+    	};
     </script>
+  </head>
+  <body>
+    <h1>巨划算</h1>
+    <table>
+      <tr>
+        <th>商品</th>
+        <th>单价(元)</th>
+        <th>颜色</th>
+        <th>库存</th>
+        <th>好评率</th>
+        <th>操作</th>
+      </tr>   
+      <tr>
+        <td>女士小皮包</td>
+        <td>80</td>
+        <td>黑色</td>
+        <td>893</td>
+        <td>98%</td>
+        <td align="center">
+          <input type="button" value="加入购物车" οnclick="add_shoppingcart(this);"/>
+        </td>
+      </tr>
+      <tr>
+        <td>夏日爆款松糕鞋</td>
+        <td>150</td>
+        <td>白色</td>
+        <td>9028</td>
+        <td>96%</td>
+        <td align="center">
+          <input type="button" value="加入购物车" οnclick="add_shoppingcart(this);"/>
+        </td>
+      </tr>
+      <tr>
+        <td>iphone6手机壳</td>
+        <td>60</td>
+        <td>透明</td>
+        <td>672</td>
+        <td>99%</td>
+        <td align="center">
+          <input type="button" value="加入购物车" οnclick="add_shoppingcart(this);"/>
+        </td>
+      </tr>
+      <tr>
+        <td>无线鼠标</td>
+        <td>100</td>
+        <td>蓝色</td>
+        <td>8937</td>
+        <td>95%</td>
+        <td align="center">
+          <input type="button" value="加入购物车" οnclick="add_shoppingcart(this);"/>
+        </td>
+      </tr>
+      <tr>
+        <td>三叶草新款运动鞋</td>
+        <td>670</td>
+        <td>红色</td>
+        <td>482</td>
+        <td>100%</td>
+        <td align="center">
+          <input type="button" value="加入购物车" οnclick="add_shoppingcart(this);"/>
+        </td>
+      </tr>
+    </table>
+  
+    <h1>购物车</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>商品</th>
+          <th>单价(元)</th>
+          <th>数量</th>
+          <th>金额(元)</th>
+          <th>删除</th>
+        </tr>
+      </thead>
+      <tbody id="goods">
+      </tbody>
+      <tfoot>
+        <tr>
+          <td colspan="3" align="right">总计</td>
+          <td id="total">0</td>
+          <td></td>
+        </tr>
+      </tfoot>
+    </table>    
+  </body>
 </html>
+
+————————————————
+版权声明：本文为CSDN博主「高科技少女喵」的原创文章，遵循 CC 4.0 BY-SA 版权协议，转载请附上原文出处链接及本声明。
+原文链接：https://blog.csdn.net/shaoyan233/article/details/79218947
